Revert "Correct flickering border of timeline header" for this is an independent problem
This reverts commit 9fb8073177cd7f1f16cc741fa2f7d30cf98fe3fe.

--- a/app/assets/stylesheets/content/work_packages/timelines/_timelines_header.sass
+++ b/app/assets/stylesheets/content/work_packages/timelines/_timelines_header.sass
@@ -24,7 +24,7 @@ wp-timeline-header
   white-space: nowrap
 
   &.-top-border
-    outline: 1px solid $timeline--header-border-color
+    border-top: 1px solid $timeline--header-border-color
 
 .wp-timeline--header-day-element
   height: 12px
@@ -33,6 +33,7 @@ wp-timeline-header
 
 .wp-timeline--header-middle-element
   border-top: 1px solid $timeline--header-border-color
+  border-bottom: 1px solid $timeline--header-border-color
   padding-top: 5px
   height: 20px
 
